src/objects/accc_Platform_Event_Binding__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Alert_Handler__c</columns>
    <columns>Allow_Consumer_Retry__c</columns>
    <columns>Consumer__c</columns>
    <columns>Environment__c</columns>
    <columns>Error_Handler__c</columns>
    <columns>Log_Handler__c</columns>
    <columns>Publisher__c</columns>
    <columns>Serialize_Event__c</columns>
    <columns>Success_Handler__c</columns>
    <columns>Store_Handler__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>